--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -12,7 +12,7 @@ body {
   top: 0;
   width: 100%;
   word-wrap: break-word;
-  z-index: 4;
+  z-index: 6;
 }
 
 .header__wrapper {
